2025-07-04  Zhengyi Fu  <i@fuzy.me>

	* init.el (+elfeed-db-sync): Run the commands in a new session
	avoid various problems.

2025-07-03  Zhengyi Fu  <i@fuzy.me>

	* init.el (grep-mode-hook): Fix configuration for `nerd-icons-grep'.

2025-07-03  Zhengyi Fu  <i@fuzy.me>

	* init.el (eat): Set default shell when using tramp.

2025-07-03  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/pp-posframe.el (pp-posframe-display-value): Use
	`line-prefix' property instead of `display' property.

2025-07-03  Zhengyi Fu  <i@fuzy.me>

	Update gptel-config

	* site-lisp/gptel-config.el (+gptel-run-command-sandboxed): New function.
	(+gptel-forge-post-cancel): Change the messages.

2025-07-03  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Fix recipe for reader.

2025-07-01  Zhengyi Fu  <i@fuzy.me>

	* init.el:
	* packages.el: Remove bufferlo.

2025-07-01  Zhengyi Fu  <i@fuzy.me>

	* init.el (+meow-setup-indicator): New function.  Added to
	`meow-global-mode-hook'.

2025-07-01  Zhengyi Fu  <i@fuzy.me>

	* init.el (tramp-compat-temporary-file-directory): Set to
	"$XDG_RUNTIME_DIR/emacs".

2025-06-27  Zhengyi Fu  <i@fuzy.me>

	Update elfeed configuration

	* init.el (+elfeed-db-sync): Call `elfeed-db-gc'. Remove the tmp
	file before exiting.
	(elfeed-search-mode-map): Bind "q" to `elfeed-db-unload'.

2025-06-24  Zhengyi Fu  <i@fuzy.me>

	* .gitignore: Add project.eld and network-security.eld.

2025-06-23  Zhengyi Fu  <i@fuzy.me>

	Enable --autostash in `magit-pull' by default

	* transient/levels.el (magit-pull): Set level of --autostash to 1.
	* transient/values.el (magit-pull): Add --autostash by default.

2025-06-22  Zhengyi Fu  <i@fuzy.me>

	* init.el (+elfeed-db-sync): Do not send notification on
	successful sync.

2025-06-22  Zhengyi Fu  <i@fuzy.me>

	Add elfeed-web

	* packages.el (web-server, elfeed-web): New packages.
	(straight-host-usernames): Update default usernames.

2025-06-22  Zhengyi Fu  <i@fuzy.me>

	* init.el (elfeed-db): Require filenotify.

2025-06-21  Zhengyi Fu  <i@fuzy.me>
